--- a/services/tenant-service/package.json
+++ b/services/tenant-service/package.json
@@ -12,21 +12,18 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.5",
-    "@types/mongoose": "^5.11.96",
     "@types/node": "^24.9.2",
     "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@scalar/express-api-reference": "^0.8.23",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2",
     "prisma": "^6.18.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-jsdoc": "^6.2.8"
   }
 }
