--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "auth-service",
+  "name": "api-gateway",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.9.2",
@@ -23,9 +20,9 @@
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "@scalar/express-api-reference": "^0.8.23",
-    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "prisma": "^6.18.0",
