--- a/services/reservation-service/package.json
+++ b/services/reservation-service/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "prisma": "^6.18.0",
     "swagger-jsdoc": "^6.2.8"
   }
