--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,14 @@ services:
       - zookeeper
     networks:
       - app-network
+    volumes:
+      - ./api-gateway:/app:delegated
+      - /app/node_modules
+    restart: unless-stopped
 
   auth-service:
-    build: ./services/auth-service
+    build:
+      context: ./services/auth-service
     environment:
       - PORT=3006
       - KAFKA_BROKERS=kafka:9092
@@ -28,9 +33,14 @@ services:
     depends_on:
       - kafka
       - zookeeper
+    volumes:
+      - ./services/auth-service:/app:delegated
+      - /app/node_modules
+    restart: unless-stopped
 
   hotel-service:
-    build: ./services/hotel-service
+    build:
+      context: ./services/hotel-service
     environment:
       - PORT=3001
       - KAFKA_BROKERS=kafka:9092
@@ -40,9 +50,14 @@ services:
     depends_on:
       - kafka
       - zookeeper
+    volumes:
+      - ./services/hotel-service:/app:delegated
+      - /app/node_modules
+    restart: unless-stopped
 
   reservation-service:
-    build: ./services/reservation-service
+    build:
+      context: ./services/reservation-service
     environment:
       - PORT=3003
       - KAFKA_BROKERS=kafka:9092
@@ -52,9 +67,14 @@ services:
     depends_on:
       - kafka
       - zookeeper
+    volumes:
+      - ./services/reservation-service:/app:delegated
+      - /app/node_modules
+    restart: unless-stopped
 
   reward-service:
-    build: ./services/reward-service
+    build:
+      context: ./services/reward-service
     environment:
       - PORT=3004
       - KAFKA_BROKERS=kafka:9092
@@ -64,9 +84,14 @@ services:
     depends_on:
       - kafka
       - zookeeper
+    volumes:
+      - ./services/reward-service:/app:delegated
+      - /app/node_modules
+    restart: unless-stopped
 
   tenant-service:
-    build: ./services/tenant-service
+    build:
+      context: ./services/tenant-service
     environment:
       - PORT=3010
       - KAFKA_BROKERS=kafka:9092
@@ -76,6 +101,10 @@ services:
     depends_on:
       - kafka
       - zookeeper
+    volumes:
+      - ./services/tenant-service:/app:delegated
+      - /app/node_modules
+    restart: unless-stopped
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
